--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "4.17.10"
   },
   "devDependencies": {
+    "autoprefixer": "^8.6.2",
     "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
     "babel-preset-env": "1.7.0",
@@ -28,6 +29,7 @@
     "handlebars-loader": "^1.7.0",
     "html-webpack-plugin": "3.2.0",
     "node-sass": "4.9.0",
+    "postcss-loader": "^2.1.5",
     "sass-loader": "7.0.1",
     "style-loader": "0.21.0",
     "url-loader": "1.0.1",
